--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,8 @@
     "string": "cpp",
     "array": "cpp",
     "string_view": "cpp",
-    "initializer_list": "cpp"
+    "initializer_list": "cpp",
+    "functional": "cpp"
   },
   "files.autoSave": "onFocusChange"
 }
