--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,7 +68,8 @@
     "array": "cpp",
     "string_view": "cpp",
     "initializer_list": "cpp",
-    "functional": "cpp"
+    "functional": "cpp",
+    "cmath": "cpp"
   },
   "files.autoSave": "onFocusChange"
 }
